--- a/index.css
+++ b/index.css
@@ -1,3 +1,109 @@
-#heading{
-    color: red
+/* *{
+    box-sizing: border-box;
+    padding:0;
+    margin: 0;
+} */
+.header {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid black;
+    padding:10px;
+}
+
+.logo{
+    width:100px;
+}
+
+.nav-items{
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.nav-items > ul {
+    font-size: 24px;
+    display: flex;
+    list-style-type: none;
+}
+
+.nav-items > ul > li{
+    padding:10px;
+    margin:10px;
+}
+
+.restaurant-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 5px;
+}
+
+.restaurant-card{
+    width:200px;
+    /* height: 300px; */
+    /* border: 1px solid black; */
+    /* background-color: #f0f0f0; */
+    padding:5px;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+.restaurant-card:hover{
+    /* transform-origin: center; */
+    transform: scale(0.95);
+    transition:  0.1s ease-in;
+
+}
+
+.image-text-sub-container{
+    position:relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.overlay-text-container{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-bottom: 8px;
+    background: linear-gradient(rgba(27, 30, 36, 0) 0%, rgb(27, 30, 36) 84.21%);
+    height: 20px;
+    border-radius: 10px;
+}
+
+.overlay-text{
+    color:white;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.search{
+    padding:10px;
+}
+
+.restaurant-logo { 
+    width: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.filter{
+    display: flex;
+    align-items: center;
+}
+
+.filter-btn{
+    margin:10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 18px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgba(2, 6, 12, 0.15);
+    padding: 8px 12px;
+    box-shadow: rgba(2, 6, 12, 0.04) 0px 2px 12px;
 }
