--- a/index.css
+++ b/index.css
@@ -86,8 +86,10 @@
 
 .restaurant-logo { 
     width: 100%;
+    height: 150px;
     border-radius: 10px;
     object-fit: cover;
+
 }
 
 .filter{
@@ -106,4 +108,26 @@
     border: 1px solid rgba(2, 6, 12, 0.15);
     padding: 8px 12px;
     box-shadow: rgba(2, 6, 12, 0.04) 0px 2px 12px;
+}
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    width: 200px;
+    height:300px;
+    background-color: #f0f0f0;
+    margin-right: 20px;
+}
+
+.login-btn{
+    padding: 0px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.filter{
+    display: flex;
 }
